@@ -24,6 +24,9 @@ OTHER. Entries should be in chronological order, i.e. oldest at the top
   
   * Added a commit hook (and instructions in the README for activation) which
     should help keep this file up-to-date. :-)
+  
+  * Updated the dist Build command to reset the files under src/ before
+    building the dist.
 
 0.03  Sun, Aug 25, 2013
 
